# IGE_LIO

./: CMakeLists.txt  README.md  package.xml
config/: eee_01_IG_LIO_ouster16.yaml  ige_lio.yaml  livox_hap_hall_IG_LIO.yaml  mapping_lidar_degenerate_IG_LIO.yaml  my_rslidar_hall_IG_LIO.yaml
include/: common_lib.h  esekfom.hpp  use-ikfom.hpp
launch/: ig_lio.launch  ige_lio.launch  mapping_eee_01_IG_LIO_ouster16.launch  mapping_lidar_degenerate_IG_LIO.launch  mapping_livox_hap_hall_IG_LIO.launch  mapping_my_rs_hall_IG_LIO.launch
msg/: Pose6D.msg
rviz_cfg/: eee_01_ouster16.rviz  loam_livox.rviz  loam_livox_hap.rviz  loam_livox_hap_outdoor.rviz  loam_livox_lidar_degenerated.rviz
src/: IMU_Processing.hpp  file_manager.cpp  file_manager.hpp  gnss_data.cpp  gnss_data.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
